@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.ttrssreader"
     android:installLocation="auto"
-    android:versionName="1.0"
+    android:versionName="1.01"
     android:versionCode="1010"
 >
 
